mi primer proyecto

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Primer <HTML:xml></HTML:xml></title>
+    <title>Primer HTML<HTML:xml></HTML:xml></title>
 </head>
 <body>
-    <h1>mi libro, tula de ratòn</h1>
-<p>DISPONIBLE EN TODOS LOS PAISES DEL FOKIN MUNDO</p>
-<body> el diavlo
+    <h1>Mi primera pàgina</h1>
+<p>hola profe</p>
+<body> 
 </html> 
 
     
